Change Log for Kicad
Started 2007-June-11

Please add newer entries at the top, list the date and your name with 
email address.

2007-Jul-30 UPDATE   Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
+ pcbnew
	Some file are added (missing .prj files)
	Better Drc test:
		Zones can be tested.
		better pad to pad test.
	

2007-Jul-25 UPDATE   Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
	** Some minor enhancements
+ pcbnew
	In Drc diags, better (more explicit) messages
	Change (and simplify) code in  'update' as well as 'insert' modules into main PCB from within the module editor,
	because it had a bug (crashes when there was no footprint in pcb)
	


2007-June-21 UPDATE Tim Hanson <tim@hardcarve.com>
================================================================================
+ pcbnew
	1. added button to 'update' as well as 'insert' modules into main PCB 
		from within the module editor.  Made them functional, of course. 
	2. added control-o, control-s & control-f to pcbnew, 
		though I'm not perfectly happy with the implementation -- wxwidgets puts
		the control-characters in alphabetical order!

2007-June-25 UPDATE   Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
+ pcbnew
	minor enhancement in Edit footprint dialog (more help tool tips).
	better hotkey.cpp (code cleaning and info messages)



2007-June-19 UPDATE   Dick Hollenbeck <dickelbeck@yahoo.com>
================================================================================
+ pcbnew
    After locking a module with 'L', update the status window with the locked
    status.  Side step some asserts from wxWidgets which were happening when
    running compiled for debug.


2007-June-16 UPDATE   Richard A Burton <richardaburton@gmail.com>