@@ -4,6 +4,16 @@ Started 2007-June-11
 Please add newer entries at the top, list the date and your name with 
 email address.
 
+2007-Jul-31 UPDATE   Geoff Harland <gharlandau@yahoo.com.au>
+================================================================================
++ pcbnew
+	Drill Map and Drill Report files now list the diameters of each drill in
+		the selected drill unit first, and then in the other drill unit.
+	Drill report files also now list the tool assigned to each drill, and
+		the correct hole count and oval count for each drill size; the
+		 file creation date and the selected drill unit are also listed.
+	
+
 2007-Jul-30 UPDATE   Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
 ================================================================================
 + pcbnew
